--- a/PORTFOILO/index.html
+++ b/PORTFOILO/index.html
@@ -165,10 +165,10 @@
 
                         <div class="image-half-round-shape"></div>
                         <div class="social-link">
-                            <a href="https://www.example.com" target="_blank"> <i class="fab fa-instagram"></i></a>
-                            <a href="https://www.example.com" target="_blank"><i class="fab fa-facebook"></i></a>
-                            <a href="https://www.example.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                             <a href="https://www.github.com" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://www.instagram.com/saranoureddine_7?igsh=aGY1dW5sMnFyczRq&utm_source=qr" target="_blank"> <i class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/share/1C9jnhBycE/?mibextid=wwXIfr" target="_blank"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.linkedin.com/in/sara-nour-eddine" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                             <a href="https://www.github.com/saranoureddine" target="_blank"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
 
