--- a/PORTFOILO/index.html
+++ b/PORTFOILO/index.html
@@ -86,7 +86,7 @@
         <div id="mobile-menu-offcanvas" class="offcanvas offcanvas-rightside offcanvas-mobile-menu-section">
 
             <div class="offcanvas-header text-end">
-                <button class="offcanvas-close"><i class="icofont-close-line"></i></button>
+                <button class="offcanvas-close"><i class="fa-solid fa-bars"></i></button>
             </div>
             <div class="offcanvas-mobile-menu-wrapper">
             
