--- a/PORTFOILO/index.html
+++ b/PORTFOILO/index.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="col">
                         <div class="mobile-action-link text-end">
-                            <a href="#mobile-menu-offcanvas" class="offcanvas-toggle offside-menu"><i class=" fa fa-solid fa-bars"></i>></a>
+                            <a href="#mobile-menu-offcanvas" class="offcanvas-toggle offside-menu"><i class=" fa fa-solid fa-bars"></i></a>
                         </div>
                     </div>
                 </div>
