--- a/PORTFOILO/index.html
+++ b/PORTFOILO/index.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="col">
                         <div class="mobile-action-link text-end">
-                            <a href="#mobile-menu-offcanvas" class="offcanvas-toggle offside-menu"><i class=" fa fa-solid fa-bars"</i></a>
+                            <a href="#mobile-menu-offcanvas" class="offcanvas-toggle offside-menu"><i class="icofont-navigation-menu"></i></a>
                         </div>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
         <div id="mobile-menu-offcanvas" class="offcanvas offcanvas-rightside offcanvas-mobile-menu-section">
 
             <div class="offcanvas-header text-end">
-                <button class="offcanvas-close"><i class=" fa fa-solid fa-bars"</i></button>
+                <button class="offcanvas-close"><i class="icofont-close-line"></i></button>
             </div>
             <div class="offcanvas-mobile-menu-wrapper">
             
