--- a/PORTFOILO/index.html
+++ b/PORTFOILO/index.html
@@ -621,7 +621,7 @@
                       </div>
                       <div>
                         <h3>Email Us</h3>
-                        <p>info@example.com</p>
+                        <p>Sarahnoureddin29@gmail.com</p>
                       </div>
                     </div>
                   </div>
