--- a/PORTFOILO/index.html
+++ b/PORTFOILO/index.html
@@ -599,7 +599,7 @@
                       </div>
                       <div>
                         <h3>Address</h3>
-                        <p>A108 Adam Street, New York, NY 535022</p>
+                        <p>A108 Tyre, Lebanon</p>
                       </div>
                     </div>
                   
@@ -610,7 +610,7 @@
                       </div>
                       <div>
                         <h3>Call Us</h3>
-                        <p>+1 5589 55488 55</p>
+                        <p>+961 78 975140</p>
                       </div>
                     </div>
                   
