--- a/PORTFOILO/index.html
+++ b/PORTFOILO/index.html
@@ -599,7 +599,7 @@
                       </div>
                       <div>
                         <h3>Address</h3>
-                        <p>A108 Tyre, Lebanon</p>
+                        <p>Tyre, Lebanon</p>
                       </div>
                     </div>
                   
